SVN Version
	* Added singleton factory for serializers. Explicit serializer
	creation is no more required.
	* Serializer test suit skips test instead of fail it if serializer
	doesn't suport argument type. (The only type that any serializer must
	support are QString and int)
	* DeviceManager class removed from library public interface. Use
	ServicesManager::addDevice instead of it.
	* Added signal clientError which is emited if received message is
	incorrect.
	* Added serializer versioning support.
	* Added QDataStream based serializer.
	* Added CMake Config file installation.

2009-11-30 Version 0.7.0
	* Build issues on windows are fixed.
	* Added ability to work with QIODevice to the ServicesManager class.
	* Added man page for qrsc utility. This manual page is generated by
	help2man program.
	* Improved error messages handling.
	* <method> element in the interface description is changed to <slot>.
	Automtic schema update can be done with qrsc utility.
	* Added <signal> elemnt to support remote signal/slot calls in both
	directions.
	* Added doxygen comments covering all library public API.
	* Written tutorial of library ussage.
	* Added qmake configuration feature file to build projects using
	QRemoteSignal.

2009-10-14 Version 0.6.0
	* Added support for the folowing types: QChar, char, signed char,
	unsigned char, short, unsigned short, unsigned, long, unsigned long,
	long long, unsigned long long, bool, QList<T>, QMap<QString,T> (where
	T is any type supported by library).
	* Added class to read write messages using any QIODevice (for example
	QTcpSocket, QUdpSocket...).
	* Added scons arguments caching.
	* Created test suit for testing message serializers.
	* Added INSTALL file with library build and installation instructions.

2009-09-13 Version 0.5.0
	* Added support of JSON as message protocol.
	* Added support of QString and int arguments.
	* Library core created.